# otel-rust-tracing-example

./: Cargo.toml
src/: main.rs
