[package]
name = "otel-rust-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = "0.26.0"
opentelemetry-semantic-conventions = "0.26.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.26.0"
tracing-subscriber = "0.3.18"
